        Fix for https://bugs.webkit.org/show_bug.cgi?id=23317

The high CPU usage was really from repeatedly firing transitions caused
        by a bug in the way we handle background-color animations. If animating
        from a valid background color to no background color, we sometimes left
        (based on timing) the background color as transparent black, but valid
        rather than invalid, which it should be. Fixing that got rid of the
        repeated firing.

        But we really were doing more expensive iteration of all objects with
        animations or transitions on them (running or not). So I added two
        optimizations to quickly short circuit when an object had no running
        animations or transitions. Things are now as zippy as ever.



Canonical link: https://commits.webkit.org/32292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40102 268f45cc-cd09-0410-ab3c-d52691b4dbfc